BPHC-134 improved sidebar scroll, still buggy with mysterious bottom whitespace though

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -27,7 +27,6 @@
   position: fixed;
   left: 250px;
   width: 0;
-  height: 100%;
   margin-left: -250px;
   overflow-y: auto;
   background: #00255e;
@@ -48,6 +47,7 @@
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
   margin-right: -250px;
+  overflow: hidden;
 }
 
 #wrapper.toggled #nav {
